fix: (attempted) background clipping on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html { 
   background: url(images/bg.png) no-repeat center center fixed;
   background-size: cover;
-  height: 100%
+  height: 100vh;
 }
 
 body {
